--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/mibrary
+spring.datasource.username=root
+spring.datasource.password=!NDook12
 
+spring.jpa.hibernate.ddl-auto = create-drop
+spring.datasource.url=jdbc:mysql://localhost:3306/library?serverTimezone=GMT
+spring.datasource.username=root
+spring.datasource.password=!NDook12
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+
+spring.jpa.hibernate.ddl-auto = create-drop
